--- a/src/spreadsheets/templates/spreadsheets/home.html
+++ b/src/spreadsheets/templates/spreadsheets/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block scripts %}
     <script src="{% static 'spreadsheets/upload.js' %}" defer></script>
@@ -18,6 +19,16 @@ home
         <div class="fallback">
             <input name="file" type="file" multiple />
         </div>
+    </form>
+    <br>
+    {% if reader %}
+        {{reader|safe}}
+    {% endif %}
+    <br>
+    <form action ="" method="POST">
+        {% csrf_token %}
+        {{form|crispy}}
+        <button type="submit" class="btn btn-info mt-2">Salvar</button>
     </form>
 
 {% endblock content %}
